Sprint 6: All volunteer feature implemented and UI updates added.